@@ -9,6 +9,8 @@ VERSION 2.3.2
     * Use system date/time format for default name when saving user playlists.
 
   BUGFIXES:
+    * Fix crash when adding new folders repeatedly in podcast/saved playlist
+      browsers.
     * Fix context menu actions acting on wrong indices in the playlist browser.
     * Fix incorrect text about "rpath" argument to collection scanner.
       (BR 236076)
